name:                  ambiata-mismi-emr
version:               0.0.1
license:               Apache-2.0
license-file:          LICENSE
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata
synopsis:              AWS library
category:              AWS
cabal-version:         >= 1.8
build-type:            Simple
description:           mismi-emr.

library
  build-depends:
                       base                            >= 3          && < 5
                     , amazonka                        >= 1.3.6      && < 1.6
                     , amazonka-core                   >= 1.3.6      && < 1.6
                     , amazonka-emr                    >= 1.3.6      && < 1.6


  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Mismi.EMR
                       Mismi.EMR.Amazonka

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             test.hs
  ghc-options:         -Wall -threaded -O2
  hs-source-dirs:      test
  build-depends:       base
                     , ambiata-disorder-core
                     , ambiata-mismi-core
                     , ambiata-mismi-emr
                     , QuickCheck                      >= 2.7        && < 2.10
                     , quickcheck-instances            == 0.3.*
