name:                  ambiata-mismi-s3-core
version:               0.0.1
license:               Apache-2.0
license-file:          LICENSE
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata
synopsis:              AWS library
category:              AWS
cabal-version:         >= 1.8
build-type:            Simple
description:           mismi-s3-core.

library
  build-depends:
                       base                            >= 3          && < 6
                     , ambiata-p
                     , ambiata-x-show
                     , attoparsec                      >= 0.12       && < 0.14
                     , text                            == 1.2.*

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       Mismi.S3.Core.Data

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             test.hs
  ghc-options:         -Wall -threaded -O2
  hs-source-dirs:      test
  build-depends:       base
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-mismi-s3-core
                     , ambiata-p
                     , attoparsec
                     , filepath                        >= 1.3        && < 1.5
                     , text
                     , QuickCheck                      >= 2.7        && < 2.10
                     , quickcheck-instances            == 0.3.*
