name:                  mismi-s3
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata
synopsis:              AWS library
category:              AWS
cabal-version:         >= 1.8
build-type:            Custom
description:           mismi-s3.

library
  build-depends:
                       base                            >= 3          && < 5
                     , p
                     , template-haskell
                     , x-conduit
                     , amazonka                        == 99.0.7
                     , amazonka-core                   == 99.0.7
                     , amazonka-s3                     == 99.0.7
                     , bytestring                      == 0.10.*
                     , bifunctors                      == 4.2.*
                     , conduit                         == 1.2.*
                     , conduit-extra                   == 1.1.*
                     , directory                       == 1.2.*
                     , either
                     , exceptions                      >= 0.6        && < 0.9
                     , filepath                        == 1.3.*
                     , http-client                     == 0.4.18.*
                     , http-conduit                    == 2.1.5.*
                     , http-types                      == 0.8.*
                     , mismi-core
                     , mtl                             >= 2.1       && < 2.3
                     , process                         == 1.2.*
                     , resourcet                       == 1.1.*
                     , semigroups                      == 0.16.*
                     , text                            == 1.2.*
                     , transformers                    >= 0.3        && < 0.5
                     , attoparsec                      == 0.12.*
                     , unix                            == 2.7.*
                     , async                           == 2.0.*
                     , retry                           == 0.6.*
                     , lens                            >= 4.8        && < 4.10
                     , these                           == 0.4.*
                     , x-exception
                     , SafeSemaphore                   == 0.10.*
                     , unix-bytestring                 == 0.3.7.*
                     , time                            == 1.4.*
                     , unordered-containers            == 0.2.5.*
                     , uuid                            == 1.3.*
                     , mmorph                          == 1.0.*

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       Mismi.S3
                       Mismi.S3.Aws.Data
                       Mismi.S3.Aws.Control
                       Mismi.S3.Aws.Default
                       Mismi.S3.Commands
                       Mismi.S3.Data
                       Mismi.S3.Default
                       Mismi.S3.Internal
  other-modules:
                       Mismi.S3.Aws.Commands

executable s3
  main-is:             s3.hs
  ghc-options:         -Wall -threaded -O2
  hs-source-dirs:      main
  build-depends:       base
                     , mismi-core
                     , mismi-s3
                     , optparse-applicative            == 0.11.*
                     , transformers                    >= 0.3        && < 0.5
                     , conduit                         == 1.2.*
                     , x-optparse
                     , unix                            == 2.7.*
                     , text
                     , p

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             test.hs
  ghc-options:         -Wall -threaded -O2
  hs-source-dirs:      test
  build-depends:       base
                     , mismi-core
                     , mismi-core-test
                     , mismi-s3
                     , amazonka                        == 99.0.7
                     , amazonka-core                   == 99.0.7
                     , amazonka-s3                     == 99.0.7
                     , either
                     , exceptions
                     , filepath
                     , directory                       == 1.2.*
                     , disorder-core
                     , disorder-corpus
                     , p
                     , http-client
                     , temporary                       == 1.2.*
                     , text
                     , transformers
                     , QuickCheck                      == 2.7.*
                     , quickcheck-instances            == 0.3.*
                     , unix                            == 2.7.*
                     , uuid                            == 1.3.*
                     , lens
                     , time                            == 1.4.*
                     , conduit                         == 1.2.*


test-suite test-io
  type:                exitcode-stdio-1.0
  main-is:             test-io.hs
  ghc-options:         -Wall -threaded -O2
  hs-source-dirs:      test
  build-depends:       base
                     , mismi-core
                     , mismi-core-test
                     , mismi-s3
                     , amazonka                        == 99.0.7
                     , amazonka-core                   == 99.0.7
                     , exceptions
                     , filepath
                     , directory                       == 1.2.*
                     , p
                     , http-client
                     , disorder-core
                     , disorder-corpus
                     , temporary                       == 1.2.*
                     , text
                     , transformers
                     , QuickCheck                      == 2.7.*
                     , quickcheck-instances            == 0.3.*
                     , unix                            == 2.7.*
                     , uuid                            == 1.3.*
                     , bytestring                      == 0.10.*
                     , lens
                     , either                          == 4.3.*
                     , cryptohash


test-suite test-reliability
  type:                exitcode-stdio-1.0
  main-is:             test-reliability.hs
  ghc-options:         -Wall -threaded -O2
  hs-source-dirs:      test
  build-depends:       base
                     , mismi-core
                     , mismi-core-test
                     , mismi-s3
                     , amazonka                        == 99.0.7
                     , amazonka-core                   == 99.0.7
                     , exceptions
                     , filepath
                     , p
                     , disorder-core
                     , disorder-corpus
                     , text
                     , transformers
                     , QuickCheck                      == 2.7.*
                     , quickcheck-instances            == 0.3.*
                     , unix                            == 2.7.*
                     , uuid                            == 1.3.*
                     , bytestring                      == 0.10.*
                     , either                          == 4.3.*
                     , temporary                       == 1.2.*
                     , lens

test-suite test-cli
  type:                exitcode-stdio-1.0

  main-is:             test-cli.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , disorder-core
