name:                  ambiata-mismi-s3
version:               0.0.1
license:               Apache-2.0
license-file:          LICENSE
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata
synopsis:              AWS library
category:              AWS
cabal-version:         >= 1.8
build-type:            Custom
description:           mismi-s3.

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-mismi-core
                     , ambiata-p
                     , ambiata-x-conduit
                     , ambiata-x-exception
                     , template-haskell
                     , amazonka                        == 1.3.2.1
                     , amazonka-core                   == 1.3.2
                     , amazonka-s3                     == 1.3.2
                     , bytestring                      == 0.10.*
                     , bifunctors                      == 4.2.*
                     , conduit                         == 1.2.*
                     , conduit-extra                   == 1.1.*
                     , directory                       == 1.2.*
                     , either                          == 4.3.*
                     , exceptions                      >= 0.6        && < 0.9
                     , filepath                        == 1.3.*
                     , http-client                     == 0.4.18.*
                     , http-conduit                    == 2.1.5.*
                     , http-types                      == 0.8.*
                     , mtl                             >= 2.1        && < 2.3
                     , process                         == 1.2.*
                     , resourcet                       == 1.1.*
                     , semigroups                      == 0.16.*
                     , text                            == 1.2.*
                     , transformers                    >= 0.3.1      && < 0.5
                     , attoparsec                      == 0.12.*
                     , unix                            == 2.7.*
                     , async                           == 2.0.*
                     , retry                           == 0.6.*
                     , lens                            >= 4.8        && < 4.10
                     , SafeSemaphore                   == 0.10.*
                     , lifted-async                    == 0.7.*
                     , unix-bytestring                 == 0.3.7.*
                     , time                            == 1.4.*
                     , unordered-containers            == 0.2.5.*
                     , uuid                            == 1.3.*
                     , mmorph                          == 1.0.*

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       Mismi.S3
                       Mismi.S3.Amazonka
                       Mismi.S3.Commands
                       Mismi.S3.Patch.Network
                       Mismi.S3.Patch.PutObjectACL
                       Mismi.S3.Data
                       Mismi.S3.Internal

executable s3
  main-is:             s3.hs
  ghc-options:         -Wall -threaded -O2
  hs-source-dirs:      main
  build-depends:       base
                     , either
                     , exceptions
                     , ambiata-mismi-core
                     , ambiata-mismi-s3
                     , ambiata-p
                     , ambiata-x-optparse
                     , filepath
                     , optparse-applicative            == 0.11.*
                     , transformers
                     , conduit
                     , unix
                     , text
                     , resourcet
                     , bytestring                      == 0.10.*

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             test.hs
  ghc-options:         -Wall -threaded -O2
  hs-source-dirs:      test
  build-depends:       base
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-mismi-core
                     , ambiata-mismi-core-test
                     , ambiata-mismi-s3
                     , ambiata-p
                     , amazonka
                     , amazonka-core
                     , amazonka-s3
                     , either
                     , exceptions
                     , filepath
                     , directory                       == 1.2.*
                     , http-client
                     , temporary                       == 1.2.*
                     , text
                     , transformers
                     , QuickCheck                      == 2.7.*
                     , quickcheck-instances            == 0.3.*
                     , unix
                     , uuid
                     , lens
                     , time
                     , conduit


test-suite test-io
  type:                exitcode-stdio-1.0
  main-is:             test-io.hs
  ghc-options:         -Wall -threaded -O2
  hs-source-dirs:      test
  build-depends:       base
                     , amazonka
                     , amazonka-core
                     , amazonka-s3
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-mismi-core
                     , ambiata-mismi-core-test
                     , ambiata-mismi-s3
                     , ambiata-p
                     , exceptions
                     , filepath
                     , directory
                     , http-client
                     , temporary                       == 1.2.*
                     , text
                     , transformers
                     , QuickCheck
                     , quickcheck-instances
                     , unix
                     , uuid
                     , bytestring
                     , lens
                     , either
                     , cryptohash


test-suite test-reliability
  type:                exitcode-stdio-1.0
  main-is:             test-reliability.hs
  ghc-options:         -Wall -threaded -O2
  hs-source-dirs:      test
  build-depends:       base
                     , amazonka
                     , amazonka-core
                     , amazonka-s3
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-mismi-core
                     , ambiata-mismi-core-test
                     , ambiata-mismi-s3
                     , ambiata-p
                     , exceptions
                     , directory
                     , filepath
                     , text
                     , transformers
                     , QuickCheck
                     , quickcheck-instances
                     , unix
                     , uuid
                     , bytestring
                     , either
                     , temporary
                     , lens

test-suite test-cli
  type:                exitcode-stdio-1.0

  main-is:             test-cli.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core
