name:                  ambiata-mismi-s3
version:               0.0.1
license:               Apache-2.0
license-file:          LICENSE
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata
synopsis:              AWS library
category:              AWS
cabal-version:         >= 1.8
build-type:            Simple
description:           mismi-s3.

library
  build-depends:
                       base                            >= 3          && < 6
                     , ambiata-mismi-core
                     , ambiata-mismi-s3-core
                     , ambiata-p
                     , ambiata-x-conduit
                     , ambiata-x-eithert
                     , ambiata-x-exception
                     , ambiata-twine
                     , template-haskell
                     , amazonka                        >= 1.3.6      && < 1.6
                     , amazonka-core                   >= 1.3.6      && < 1.6
                     , amazonka-s3                     >= 1.3.6      && < 1.6
                     , bytestring                      == 0.10.*
                     , bifunctors                      >= 4.2        && < 5.3
                     , conduit                         == 1.2.*
                     , conduit-extra                   >= 1.1.13     && < 1.2
                     , directory                       >= 1.2        && < 1.4
                     , exceptions                      >= 0.6        && < 0.9
                     , extra                           == 1.6.*
                     , filepath                        >= 1.3        && < 1.5
                     , http-client                     == 0.5.*
                     , http-types                      == 0.8.*
                     , lifted-async                    == 0.9.*
                     , mtl                             >= 2.1        && < 2.3
                     , process                         >= 1.2        && < 1.5
                     , resourcet                       == 1.1.*
                     , semigroups                      >= 0.16       && < 0.19
                     , text                            == 1.2.*
                     , transformers                    >= 0.3.1      && < 0.6
                     , attoparsec                      >= 0.12       && < 0.14
                     , unix                            == 2.7.*
                     , async                           >= 2.0        && < 2.2
                     , retry                           == 0.7.*
                     , lens                            >= 4.8        && < 4.16
                     , SafeSemaphore                   == 0.10.*
                     , unix-bytestring                 == 0.3.7.*
                     , time                            >= 1.4        && < 1.7
                     , unordered-containers            >= 0.2.5      && < 0.3
                     , uuid                            == 1.3.*
                     , mmorph                          == 1.0.*
                     , lifted-base                     == 0.2.*

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       Mismi.S3
                       Mismi.S3.Amazonka
                       Mismi.S3.Commands
                       Mismi.S3.Patch.Network
                       Mismi.S3.Patch.PutObjectACL
                       Mismi.S3.Data
                       Mismi.S3.Internal

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             test.hs
  ghc-options:         -Wall -threaded -O2
  hs-source-dirs:      test
  build-depends:       base
                     , amazonka
                     , amazonka-core
                     , amazonka-s3
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-mismi-core
                     , ambiata-mismi-core-test
                     , ambiata-mismi-s3
                     , ambiata-mismi-s3-core
                     , ambiata-mismi-s3-core-test
                     , ambiata-p
                     , ambiata-x-eithert
                     , conduit
                     , containers                      == 0.5.*
                     , directory
                     , exceptions
                     , filepath
                     , http-client
                     , lens
                     , mtl                             >= 2.1        && < 2.3
                     , QuickCheck                      >= 2.7        && < 2.10
                     , quickcheck-instances            == 0.3.*
                     , resourcet
                     , temporary                       == 1.2.*
                     , text
                     , time
                     , transformers
                     , unix
                     , uuid



test-suite test-io
  type:                exitcode-stdio-1.0
  main-is:             test-io.hs
  ghc-options:         -Wall -threaded -O2
  hs-source-dirs:      test
  build-depends:       base
                     , amazonka
                     , amazonka-core
                     , amazonka-s3
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-mismi-core
                     , ambiata-mismi-core-test
                     , ambiata-mismi-s3
                     , ambiata-mismi-s3-core
                     , ambiata-mismi-s3-core-test
                     , ambiata-p
                     , ambiata-x-eithert
                     , bytestring
                     , conduit
                     , cryptohash
                     , directory
                     , ambiata-twine
                     , exceptions
                     , filepath
                     , http-client
                     , lens
                     , mtl                             >= 2.1        && < 2.3
                     , QuickCheck                      >= 2.7        && < 2.10
                     , quickcheck-instances            == 0.3.*
                     , resourcet
                     , temporary                       == 1.2.*
                     , text
                     , time
                     , transformers
                     , unix
                     , uuid


test-suite test-reliability
  type:                exitcode-stdio-1.0
  main-is:             test-reliability.hs
  ghc-options:         -Wall -threaded -O2
  hs-source-dirs:      test
  build-depends:       base
                     , amazonka
                     , amazonka-core
                     , amazonka-s3
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-mismi-core
                     , ambiata-mismi-core-test
                     , ambiata-mismi-s3
                     , ambiata-mismi-s3-core
                     , ambiata-mismi-s3-core-test
                     , ambiata-p
                     , ambiata-x-eithert
                     , bytestring
                     , conduit
                     , cryptohash
                     , directory
                     , exceptions
                     , filepath
                     , http-client
                     , lens
                     , mtl                             >= 2.1        && < 2.3
                     , QuickCheck                      >= 2.7        && < 2.10
                     , quickcheck-instances            == 0.3.*
                     , resourcet
                     , temporary                       == 1.2.*
                     , text
                     , time
                     , transformers
                     , unix
                     , uuid

benchmark bench
  type:                exitcode-stdio-1.0
  main-is:             bench.hs
  ghc-options:         -Wall -threaded -O2
  hs-source-dirs:      test
  build-depends:       base
                     , ambiata-disorder-corpus
                     , ambiata-mismi-core
                     , ambiata-mismi-core-test
                     , ambiata-mismi-s3
                     , ambiata-mismi-s3-core
                     , ambiata-mismi-s3-core-test
                     , ambiata-p
                     , ambiata-x-eithert
                     , criterion                       == 1.1.*
                     , conduit-extra                   >= 1.1.13     && < 1.2
                     , exceptions                      == 0.8.*
                     , QuickCheck                      >= 2.7        && < 2.10
                     , quickcheck-instances            == 0.3.*
                     , quickcheck-properties           == 0.1.*
                     , quickcheck-text                 == 0.1.*
                     , random
                     , temporary                       == 1.2.*
                     , text
                     , transformers
                     , uuid                            == 1.3.*
