name:                  ambiata-mismi-sqs-core
version:               0.1.6
license:               Apache-2.0
license-file:          LICENSE
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata
synopsis:              AWS library
category:              AWS
cabal-version:         >= 1.8
build-type:            Simple
description:           mismi-sqs-core.

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-p
                     , ambiata-mismi-kernel
                     , text                            == 1.2.*

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       Mismi.SQS.Core.Data

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             test.hs
  ghc-options:         -Wall -threaded -O2
  hs-source-dirs:      test
  build-depends:       base
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-mismi-kernel
                     , ambiata-mismi-kernel-test
                     , ambiata-mismi-sqs-core
                     , ambiata-p
                     , text
                     , QuickCheck                      >= 2.7        && < 2.12
                     , quickcheck-instances            == 0.3.*
