name:                  ambiata-mismi-sqs
version:               0.0.1
license:               Apache-2.0
license-file:          LICENSE
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata
synopsis:              AWS library
category:              AWS
cabal-version:         >= 1.8
build-type:            Simple
description:           mismi.

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-p
                     , ambiata-mismi-core
                     , ambiata-mismi-sqs-core
                     , template-haskell
                     , amazonka                        >= 1.3.6      && < 1.6
                     , amazonka-core                   >= 1.3.6      && < 1.6
                     , amazonka-sqs                    >= 1.3.6      && < 1.6
                     , bytestring                      == 0.10.*
                     , conduit-extra                   >= 1.1.13     && < 1.2
                     , exceptions                      >= 0.6        && < 0.9
                     , http-client                     == 0.5.*
                     , mtl                             >= 2.2.1      && < 2.3
                     , resourcet                       == 1.1.*
                     , text                            == 1.2.*
                     , transformers                    >= 0.3.1      && < 0.6
                     , lens                            >= 4.8        && < 4.16
                     , unordered-containers            >= 0.2.5      && < 0.3
                     , scientific                      == 0.3.*


  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       Mismi.SQS
                       Mismi.SQS.Amazonka
                       Mismi.SQS.Commands
                       Mismi.SQS.Data

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             test.hs
  ghc-options:         -Wall -threaded -O2
  hs-source-dirs:      test
  build-depends:       base
                     , amazonka
                     , amazonka-core
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-p
                     , ambiata-mismi-core
                     , ambiata-mismi-core-test
                     , ambiata-mismi-sqs-core
                     , ambiata-mismi-sqs-core-test
                     , ambiata-mismi-sqs
                     , exceptions
                     , text
                     , transformers
                     , QuickCheck                      >= 2.7        && < 2.10
                     , quickcheck-instances            == 0.3.*

test-suite test-io
  type:                exitcode-stdio-1.0
  main-is:             test-io.hs
  ghc-options:         -Wall -threaded -O2
  hs-source-dirs:      test
  build-depends:       base
                     , amazonka
                     , amazonka-core
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-p
                     , ambiata-mismi-core
                     , ambiata-mismi-core-test
                     , ambiata-mismi-sqs-core
                     , ambiata-mismi-sqs-core-test
                     , ambiata-mismi-sqs
                     , exceptions
                     , lens
                     , text
                     , transformers
                     , QuickCheck                      >= 2.7        && < 2.10
                     , quickcheck-instances            == 0.3.*
