name:                  mismi-test
version:               0.0.1
cabal-version:         >= 1.8
build-type:            Simple

library
  build-depends:
                       base
                     , mismi
                     , aws
                     , exceptions
                     , filepath
                     , p
                     , http-client
                     , orphanarium-corpus
                     , text
                     , transformers
                     , QuickCheck
                     , quickcheck-instances
                     , unix
                     , temporary
                     , uuid

  exposed-modules:
                       Mismi.Arbitrary
                       Mismi.Test.S3
